// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoBoardIcon renders with default size 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={28}
  bbWidth={28}
  fill="none"
  focusable={false}
  height={28}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": 28,
        "width": 28,
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
  width={28}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGRect
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      height="20"
      propList={
        [
          "stroke",
          "strokeWidth",
        ]
      }
      rx="2"
      stroke={
        {
          "payload": 4294967295,
          "type": 0,
        }
      }
      strokeWidth="2"
      width="20"
      x="2"
      y="2"
    />
    <RNSVGPath
      d="M7 2V22"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeWidth",
          "strokeLinecap",
        ]
      }
      stroke={
        {
          "payload": 4294967295,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeWidth="1.5"
    />
    <RNSVGPath
      d="M12 2V22"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeWidth",
          "strokeLinecap",
        ]
      }
      stroke={
        {
          "payload": 4294967295,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeWidth="1.5"
    />
    <RNSVGPath
      d="M17 2V22"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeWidth",
          "strokeLinecap",
        ]
      }
      stroke={
        {
          "payload": 4294967295,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeWidth="1.5"
    />
    <RNSVGPath
      d="M2 7H22"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeWidth",
          "strokeLinecap",
        ]
      }
      stroke={
        {
          "payload": 4294967295,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeWidth="1.5"
    />
    <RNSVGPath
      d="M2 12H22"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeWidth",
          "strokeLinecap",
        ]
      }
      stroke={
        {
          "payload": 4294967295,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeWidth="1.5"
    />
    <RNSVGPath
      d="M2 17H22"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeWidth",
          "strokeLinecap",
        ]
      }
      stroke={
        {
          "payload": 4294967295,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeWidth="1.5"
    />
    <RNSVGCircle
      cx="12"
      cy="12"
      fill={
        {
          "payload": 4294967295,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="2.5"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`GoBoardIcon renders without crashing 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={24}
  bbWidth={24}
  fill="none"
  focusable={false}
  height={24}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": 24,
        "width": 24,
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
  width={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGRect
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      height="20"
      propList={
        [
          "stroke",
          "strokeWidth",
        ]
      }
      rx="2"
      stroke={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      strokeWidth="2"
      width="20"
      x="2"
      y="2"
    />
    <RNSVGPath
      d="M7 2V22"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeWidth",
          "strokeLinecap",
        ]
      }
      stroke={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeWidth="1.5"
    />
    <RNSVGPath
      d="M12 2V22"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeWidth",
          "strokeLinecap",
        ]
      }
      stroke={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeWidth="1.5"
    />
    <RNSVGPath
      d="M17 2V22"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeWidth",
          "strokeLinecap",
        ]
      }
      stroke={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeWidth="1.5"
    />
    <RNSVGPath
      d="M2 7H22"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeWidth",
          "strokeLinecap",
        ]
      }
      stroke={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeWidth="1.5"
    />
    <RNSVGPath
      d="M2 12H22"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeWidth",
          "strokeLinecap",
        ]
      }
      stroke={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeWidth="1.5"
    />
    <RNSVGPath
      d="M2 17H22"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeWidth",
          "strokeLinecap",
        ]
      }
      stroke={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeWidth="1.5"
    />
    <RNSVGCircle
      cx="12"
      cy="12"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "fill",
        ]
      }
      r="2.5"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
